jitsi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      containers:
      - name: jicofo
        image: jitsi/jicofo:latest
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      containers:
      - name: jvb
        image: jitsi/jvb:latest
        ports:
        - containerPort: 10000
          protocol: UDP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: jitsi/web:latest
        ports:
        - containerPort: 80
