jitsi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prosody
  namespace: jitsi
spec:
  selector:
    app: prosody
  ports:
    - port: 5222
      targetPort: 5222
      name: xmpp

---

apiVersion: v1
kind: Service
metadata:
  name: jicofo
  namespace: jitsi
spec:
  selector:
    app: jicofo
  ports:
    - port: 5347
      targetPort: 5347
      name: focus
